# DOJAA-Senior-Project

./: app.py  dashboard.css  dashboard.html  dashboard.js  dashboard_data.json  dummy_data.csv  index.html  login.css  login.html  login.js  main.py  pyproject.toml  run.py  vulnerability-distribution.js
dojaa/: __init__.py  collectors.py  config.py  export_json.py  inventory.py  main.py  normalizer.py  pipeline.py  risk_engine.py  testing.py  utils.py
static/css/: dashboard.css  style.css
templates/: base.html  dashboard.html  hosts.html  login.html  open_ports.html  risk_summary.html  ssl_tls.html
