[project]
name = "dojaa-senior-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.14"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "shodan (>=1.31.0,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "rich (>=14.3.3,<15.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
